external-crates/move/crates/move-prover/tests/snapshots/spec_well_formed/spec_well_formed_func_conditions.move.snap
---
source: crates/move-prover/tests/integration.rs
expression: output
snapshot_kind: text
---
Verification successful
warning: unused variable
  ┌─ tests/inputs/spec_well_formed/spec_well_formed_func_conditions.move:6:16
  │
6 │ public fun foo(a: u8) {
  │                ^ Unused parameter 'a'. Consider removing or prefixing with an underscore: '_a'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning: Consider moving pre-condition before function call
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_func_conditions.move:12:3
   │
12 │   ensures(true);
   │   ^^^^^^^^^^^^^

warning: Consider moving post-condition after target function call
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_func_conditions.move:16:3
   │
16 │   asserts(true);
   │   ^^^^^^^^^^^^^

warning: Consider moving post-condition after target function call
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_func_conditions.move:17:3
   │
17 │   requires(true);
   │   ^^^^^^^^^^^^^^
