external-crates/move/crates/move-prover/tests/snapshots/spec_well_formed/spec_well_formed_no_func_call.move.snap
---
source: crates/move-prover/tests/integration.rs
assertion_line: 57
expression: output
snapshot_kind: text
---
Verification failed: exiting with bytecode transformation errors
error: Consider add function call to spec
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_no_func_call.move:11:1
   │  
11 │ ╭ public fun foo_spec<T>() {
12 │ │   //foo<u8>();
13 │ │   ensures(true);
14 │ │ }
   │ ╰─^
