external-crates/move/crates/move-prover/tests/snapshots/spec_well_formed/spec_well_formed_params_count.move.snap
---
source: crates/move-prover/tests/integration.rs
assertion_line: 57
expression: output
snapshot_kind: text
---
Verification failed: exiting with bytecode transformation errors
error: Spec function have differ params count than underlying func
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_params_count.move:11:1
   │  
11 │ ╭ public fun foo_spec(x: u128) {
12 │ │   foo();
13 │ │   ensures(true);
14 │ │ }
   │ ╰─^
