external-crates/move/crates/move-prover/tests/snapshots/spec_well_formed/spec_well_formed_params_names.move.snap
---
source: crates/move-prover/tests/integration.rs
expression: output
snapshot_kind: text
---
Verification successful
warning: Spec function signature have differ params name than underlying func
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_params_names.move:15:1
   │  
15 │ ╭ public fun foo_spec(a: u64): u64 {
16 │ │   let result = foo(a);
17 │ │ 
18 │ │   ensures(true);
19 │ │ 
20 │ │   result
21 │ │ }
   │ ╰─^
