external-crates/move/crates/move-prover/tests/snapshots/spec_well_formed/spec_well_formed_params_using.move.snap
---
source: crates/move-prover/tests/integration.rs
assertion_line: 57
expression: output
snapshot_kind: text
---
Verification failed: exiting with bytecode transformation errors
error: Underlying func input var is not a function parameter
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_params_using.move:11:1
   │  
11 │ ╭ public fun foo_spec(x: u128) {
12 │ │   foo(7u128);
13 │ │   ensures(true);
14 │ │ }
   │ ╰─^
