external-crates/move/crates/move-prover/tests/snapshots/spec_well_formed/spec_well_formed_return_types_count.move.snap
---
source: crates/move-prover/tests/integration.rs
expression: output
snapshot_kind: text
---
exiting with bytecode transformation errors
warning: unused variable
  ┌─ tests/inputs/spec_well_formed/spec_well_formed_return_types_count.move:6:16
  │
6 │ public fun foo(x: u128) {
  │                ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error: Spec function have differ return types count than underlying func
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_return_types_count.move:11:1
   │  
11 │ ╭ public fun foo_spec(x: u128): u128 {
12 │ │   foo(x);
13 │ │   ensures(true);
14 │ │ 
15 │ │   x
16 │ │ }
   │ ╰─^
