external-crates/move/crates/move-prover/tests/snapshots/spec_well_formed/spec_well_formed_type_params_order.move.snap
---
source: crates/move-prover/tests/integration.rs
expression: output
snapshot_kind: text
---
exiting with bytecode transformation errors
warning: unused function type parameter
  ┌─ tests/inputs/spec_well_formed/spec_well_formed_type_params_order.move:6:16
  │
6 │ public fun foo<T, K>() {
  │                ^ Unused type parameter 'T'.
  │
  = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning: unused function type parameter
  ┌─ tests/inputs/spec_well_formed/spec_well_formed_type_params_order.move:6:19
  │
6 │ public fun foo<T, K>() {
  │                   ^ Unused type parameter 'K'.
  │
  = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error: Underlying func accepting type param from spec in wrong order
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_type_params_order.move:11:1
   │  
11 │ ╭ public fun foo_spec<T, K>() {
12 │ │   foo<K, T>();
13 │ │   ensures(true);
14 │ │ }
   │ ╰─^
